<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2011 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software                        
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    >

    <!-- ddd add esurfing dial option -->
    <!-- modified by zzz -->
    <!-- <item -->
    <!-- android:id="@+id/menu_esurfing_dial" -->
    <!-- android:title="@string/esurfing_dial" -->
    <!-- android:showAsAction="withText" -->
    <!-- android:orderInCategory="1" -->
    <!-- /> -->

    
    <item
        android:id="@+id/menu_add_contacts"
        android:title="@string/recentCalls_addToContact"
        android:showAsAction="withText"
        android:orderInCategory="1" 
        />
   
    <item
        android:id="@+id/menu_send_sms"
        android:title="@string/menu_send_sms"
        android:showAsAction="withText"
        android:icon="@drawable/badge_action_sms"
        android:orderInCategory="1" />
    
    <item
        android:id="@+id/menu_2s_pause"
        android:title="@string/add_2sec_pause"
        android:showAsAction="withText"
        android:orderInCategory="1" />

    <item
        android:id="@+id/menu_add_wait"
        android:title="@string/add_wait"
        android:showAsAction="withText"
        android:orderInCategory="1" />
    
    <item
        android:id="@+id/menu_ip_call_one"
        android:title="@string/ip_call_one"
        android:showAsAction="withText"
        android:orderInCategory="1" />
    
    <item
        android:id="@+id/menu_ip_call_two"
        android:title="@string/ip_call_two"
        android:showAsAction="withText"
        android:orderInCategory="2" />
    
    <item
        android:id="@+id/menu_call_setting"
        android:title="@string/call_setting"
        android:showAsAction="withText"
        android:orderInCategory="1" />

    <item
        android:id="@+id/menu_call_settings_dialpad"
        android:title="@string/call_settings"
        android:showAsAction="withText"
        android:orderInCategory="1" />
</menu>
